--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <header>
     <h1>Bienvenido a ÉterFlor</h1>
     <p>Ramos eternos, libros y más. ¡Haz tu pedido ahora y lleva algo único!</p>
-    <button onclick="window.location.href='https://wa.me/519XXXXXXXX'">Haz tu pedido</button>
+    <button onclick="window.location.href='https://wa.me/51949442473'">Haz tu pedido</button>
   </header>
 
   <!-- Sección de Flores -->
@@ -156,13 +156,13 @@
       <img src="https://link_a_imagen_de_flor1.jpg" alt="Ramo Clásico">
       <h3>Ramo Clásico</h3>
       <p>Hermosas flores que duran para siempre. Solo por $20.</p>
-      <button onclick="window.location.href='https://wa.me/519XXXXXXXX'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
     </div>
     <div class="product">
       <img src="https://link_a_imagen_de_flor2.jpg" alt="Ramo Colorido">
       <h3>Ramo Colorido</h3>
       <p>Un toque de color y frescura en tu día. Solo por $25.</p>
-      <button onclick="window.location.href='https://wa.me/519XXXXXXXX'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
     </div>
   </section>
 
@@ -179,7 +179,7 @@
       <img src="https://link_a_imagen_de_libro2.jpg" alt="Libro 2">
       <h3>Florecer en el Tiempo</h3>
       <p>La vida a través de las flores. Solo por $12.</p>
-      <button onclick="window.location.href='https://wa.me/519XXXXXXXX'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
     </div>
   </section>
 
@@ -190,13 +190,13 @@
       <img src="https://link_a_imagen_de_electro1.jpg" alt="Electrodoméstico 1">
       <h3>Vaporera de Alta Eficiencia</h3>
       <p>Perfecta para cocinar de manera saludable. Solo por $50.</p>
-      <button onclick="window.location.href='https://wa.me/519XXXXXXXX'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
     </div>
     <div class="electronic">
       <img src="https://link_a_imagen_de_electro2.jpg" alt="Electrodoméstico 2">
       <h3>Licoradora Inoxidable</h3>
       <p>Para hacer jugos frescos y saludables. Solo por $30.</p>
-      <button onclick="window.location.href='https://wa.me/519XXXXXXXX'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
     </div>
   </section>
 
@@ -207,7 +207,7 @@
       <img src="https://link_a_imagen_de_piedrita1.jpg" alt="Piedrita 1">
       <h3>Piedrita Rosa</h3>
       <p>El toque perfecto para tu colección. Solo por $5.</p>
-      <button onclick="window.location.href='https://wa.me/519XXXXXXXX'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
     </div>
   </section>
 
