--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
   <section class="products-section">
     <h2>Flores Eternas</h2>
     <div class="product">
-      <img src="https://link_a_imagen_de_flor1.jpg" alt="Ramo Clásico">
+      <img src="https://i.pinimg.com/736x/c4/d9/bf/c4d9bf6c7654ab80ec6bf1dea6f4d874.jpg" alt="Ramo Clásico">
       <h3>Ramo Clásico</h3>
       <p>Hermosas flores que duran para siempre. Solo por $20.</p>
-      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
     </div>
     <div class="product">
       <img src="https://link_a_imagen_de_flor2.jpg" alt="Ramo Colorido">
       <h3>Ramo Colorido</h3>
       <p>Un toque de color y frescura en tu día. Solo por $25.</p>
-      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
     </div>
   </section>
 
@@ -173,13 +173,13 @@
       <img src="https://link_a_imagen_de_libro1.jpg" alt="Libro 1">
       <h3>El Arte de la Naturaleza</h3>
       <p>Un libro lleno de belleza natural. Solo por $10.</p>
-      <button onclick="window.location.href='https://wa.me/519XXXXXXXX'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
     </div>
     <div class="book">
       <img src="https://link_a_imagen_de_libro2.jpg" alt="Libro 2">
       <h3>Florecer en el Tiempo</h3>
       <p>La vida a través de las flores. Solo por $12.</p>
-      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
     </div>
   </section>
 
@@ -190,7 +190,7 @@
       <img src="https://link_a_imagen_de_electro1.jpg" alt="Electrodoméstico 1">
       <h3>Vaporera de Alta Eficiencia</h3>
       <p>Perfecta para cocinar de manera saludable. Solo por $50.</p>
-      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
     </div>
     <div class="electronic">
       <img src="https://link_a_imagen_de_electro2.jpg" alt="Electrodoméstico 2">
@@ -207,7 +207,7 @@
       <img src="https://link_a_imagen_de_piedrita1.jpg" alt="Piedrita 1">
       <h3>Piedrita Rosa</h3>
       <p>El toque perfecto para tu colección. Solo por $5.</p>
-      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
+      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
     </div>
   </section>
 
