--- a/index.html
+++ b/index.html
@@ -2,219 +2,84 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ÉterFlor - Ramos Eternos</title>
+  <title>ÉterFlor</title>
   <style>
-    /* Estilos Generales */
     body {
-      font-family: sans-serif;
       margin: 0;
-      padding: 0;
-      background: url('https://link_a_una_imagen_de_fondo.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
+      font-family: 'Arial', sans-serif;
+      background-color: #fff0f5;
+      color: #333;
     }
 
-    /* Header */
     header {
-      text-align: center;
-      padding: 50px;
-      background: rgba(0, 0, 0, 0.5);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    }
-
-    header h1 {
-      font-size: 48px;
-      margin: 0;
-    }
-
-    /* Sección de Flores */
-    .products-section {
-      padding: 50px 20px;
-      background: rgba(255, 255, 255, 0.6);
-      text-align: center;
-    }
-
-    .product {
-      display: inline-block;
-      width: 30%;
-      margin: 10px;
-      background: rgba(255, 255, 255, 0.7);
+      background-color: #c2185b;
+      color: white;
       padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
       text-align: center;
+      font-size: 2em;
     }
 
-    .product img {
-      width: 100%;
+    .seccion {
+      padding: 30px;
+    }
+
+    .seccion h2 {
+      margin-bottom: 15px;
+      color: #880e4f;
+    }
+
+    .galeria {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
+
+    .item {
+      width: 120px;
+      height: 120px;
+      background-color: #f8bbd0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       border-radius: 10px;
-      transition: all 0.3s ease;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      cursor: pointer;
+      transition: transform 0.2s;
     }
 
-    .product img:hover {
+    .item:hover {
       transform: scale(1.05);
     }
 
-    .product h3 {
-      margin: 15px 0;
-    }
-
-    /* Sección de Libros */
-    .books-section {
-      padding: 50px 20px;
-      background: rgba(255, 255, 255, 0.6);
-      text-align: center;
-    }
-
-    .book {
-      display: inline-block;
-      width: 30%;
-      margin: 10px;
-      background: rgba(255, 255, 255, 0.7);
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      text-align: center;
-    }
-
-    /* Sección de Electrodomésticos */
-    .electronics-section {
-      padding: 50px 20px;
-      background: rgba(255, 255, 255, 0.6);
-      text-align: center;
-    }
-
-    .electronic {
-      display: inline-block;
-      width: 30%;
-      margin: 10px;
-      background: rgba(255, 255, 255, 0.7);
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      text-align: center;
-    }
-
-    /* Sección de Piedritas */
-    .stones-section {
-      padding: 50px 20px;
-      background: rgba(255, 255, 255, 0.6);
-      text-align: center;
-    }
-
-    .stone {
-      display: inline-block;
-      width: 30%;
-      margin: 10px;
-      background: rgba(255, 255, 255, 0.7);
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      text-align: center;
-    }
-
-    /* Botones */
-    button {
-      padding: 15px 30px;
-      background-color: #8a2be2;
-      color: white;
-      border: none;
-      border-radius: 30px;
-      font-size: 18px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #6a1d9e;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.5);
-      color: white;
+    .item img {
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
   <header>
-    <h1>Bienvenido a ÉterFlor</h1>
-    <p>Ramos eternos, libros y más. ¡Haz tu pedido ahora y lleva algo único!</p>
-    <button onclick="window.location.href='https://wa.me/51949442473'">Haz tu pedido</button>
+    ÉterFlor
   </header>
 
-  <!-- Sección de Flores -->
-  <section class="products-section">
-    <h2>Flores Eternas</h2>
-    <div class="product">
-      <img src="https://i.pinimg.com/736x/c4/d9/bf/c4d9bf6c7654ab80ec6bf1dea6f4d874.jpg" alt="Ramo Clásico">
-      <h3>Ramo Clásico</h3>
-      <p>Hermosas flores que duran para siempre. Solo por $20.</p>
-      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
+  <section class="seccion">
+    <h2>Flores eternas</h2>
+    <div class="galeria">
+      <div class="item"><img src="https://via.placeholder.com/100?text=Flor1" alt="Flor 1"></div>
+      <div class="item"><img src="https://via.placeholder.com/100?text=Flor2" alt="Flor 2"></div>
+      <div class="item"><img src="https://via.placeholder.com/100?text=Flor3" alt="Flor 3"></div>
+      <div class="item"><img src="https://via.placeholder.com/100?text=Flor4" alt="Flor 4"></div>
     </div>
-    <div class="product">
-      <img src="https://link_a_imagen_de_flor2.jpg" alt="Ramo Colorido">
-      <h3>Ramo Colorido</h3>
-      <p>Un toque de color y frescura en tu día. Solo por $25.</p>
-      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
+  </section>
+    <section class="seccion">
+    <h2>Libros</h2>
+    <div class="galeria">
+      <div class="item"><img src="https://via.placeholder.com/100?text=Libro1" alt="Libro 1"></div>
+      <div class="item"><img src="https://via.placeholder.com/100?text=Libro2" alt="Libro 2"></div>
+      <div class="item"><img src="https://via.placeholder.com/100?text=Libro3" alt="Libro 3"></div>
+      <div class="item"><img src="https://via.placeholder.com/100?text=Libro4" alt="Libro 4"></div>
     </div>
   </section>
 
-  <!-- Sección de Libros -->
-  <section class="books-section">
-    <h2>Libros a la Venta</h2>
-    <div class="book">
-      <img src="https://link_a_imagen_de_libro1.jpg" alt="Libro 1">
-      <h3>El Arte de la Naturaleza</h3>
-      <p>Un libro lleno de belleza natural. Solo por $10.</p>
-      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
-    </div>
-    <div class="book">
-      <img src="https://link_a_imagen_de_libro2.jpg" alt="Libro 2">
-      <h3>Florecer en el Tiempo</h3>
-      <p>La vida a través de las flores. Solo por $12.</p>
-      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
-    </div>
-  </section>
-
-  <!-- Sección de Electrodomésticos -->
-  <section class="electronics-section">
-    <h2>Electrodomésticos</h2>
-    <div class="electronic">
-      <img src="https://link_a_imagen_de_electro1.jpg" alt="Electrodoméstico 1">
-      <h3>Vaporera de Alta Eficiencia</h3>
-      <p>Perfecta para cocinar de manera saludable. Solo por $50.</p>
-      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
-    </div>
-    <div class="electronic">
-      <img src="https://link_a_imagen_de_electro2.jpg" alt="Electrodoméstico 2">
-      <h3>Licoradora Inoxidable</h3>
-      <p>Para hacer jugos frescos y saludables. Solo por $30.</p>
-      <button onclick="window.location.href='https://wa.me/5151949442473'">Comprar</button>
-    </div>
-  </section>
-
-  <!-- Sección de Piedritas -->
-  <section class="stones-section">
-    <h2>Piedritas Mágicas</h2>
-    <div class="stone">
-      <img src="https://link_a_imagen_de_piedrita1.jpg" alt="Piedrita 1">
-      <h3>Piedrita Rosa</h3>
-      <p>El toque perfecto para tu colección. Solo por $5.</p>
-      <button onclick="window.location.href='https://wa.me/51949442473'">Comprar</button>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 ÉterFlor | Todos los derechos reservados</p>
-  </footer>
-
-</body>
-</html>
