--- a/index.html
+++ b/index.html
@@ -28,23 +28,22 @@
     }
 
     .hojas {
-      position: absolute;
-      width: 100px;
-      opacity: 0.1;
-      animation: flotar 10s infinite ease-in-out;
-    }
+  position: absolute;
+  opacity: 0.2;
+  animation: flotar 10s infinite ease-in-out;
+}
 
-    .hoja1 {
-      top: 10px;
-      left: 20px;
-      transform: rotate(20deg);
-    }
+.hoja1 {
+  top: 10px;
+  left: 20px;
+  transform: rotate(20deg);
+}
 
-    .hoja2 {
-      bottom: 10px;
-      right: 30px;
-      transform: rotate(-30deg);
-    }
+.hoja2 {
+  bottom: 10px;
+  right: 30px;
+  transform: rotate(-30deg);
+}
 
     @keyframes flotar {
       0% { transform: translateY(0) rotate(0deg); }
@@ -55,8 +54,9 @@
 </head>
 <body>
 
-  <header>
-    <img src="https://www.svgrepo.com/show/313971/leaf.svg" class="hojas hoja1">
-    <img src="https://www.svgrepo.com/show/313971/leaf.svg" class="hojas hoja2">
+   <header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Leaf_icon.svg" class="hojas hoja1" width="80" height="80">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Leaf_icon.svg" class="hojas hoja2" width="80" height="80">
     <h1>ÉterFlor</h1>
   </header>
+
