--- a/index.html
+++ b/index.html
@@ -60,3 +60,43 @@
     <h1>ÉterFlor</h1>
   </header>
 
+  <!-- Sección: Flores Eternas -->
+  <section style="padding: 50px 20px; background-color: #fff0f5;">
+    <h2 style="text-align: center; font-family: 'Montserrat', sans-serif; color: #ad1457; font-size: 2.5em; margin-bottom: 30px;">
+      🌹 Flores Eternas
+    </h2>
+
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; max-width: 1200px; margin: 0 auto;">
+      
+      <!-- Flor 1 -->
+      <div style="background: white; border-radius: 16px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); padding: 20px; text-align: center;">
+        <img src="https://cdn.pixabay.com/photo/2020/03/08/14/32/flower-4910972_1280.jpg" alt="Flor eterna rosada" style="width: 100%; border-radius: 12px;">
+        <h3 style="margin-top: 15px; color: #880e4f;">Flor Rosada</h3>
+        <p style="color: #444;">Rosa eterna en caja de cristal. Ideal para regalos románticos.</p>
+        <button style="background-color: #ec407a; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+          Comprar
+        </button>
+      </div>
+
+      <!-- Flor 2 -->
+      <div style="background: white; border-radius: 16px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); padding: 20px; text-align: center;">
+        <img src="https://cdn.pixabay.com/photo/2015/12/01/20/28/road-1072823_1280.jpg" alt="Flor eterna azul" style="width: 100%; border-radius: 12px;">
+        <h3 style="margin-top: 15px; color: #880e4f;">Flor Azul</h3>
+        <p style="color: #444;">Flor mágica azul con luz LED. Símbolo de eternidad.</p>
+        <button style="background-color: #ec407a; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+          Comprar
+        </button>
+      </div>
+
+      <!-- Flor 3 -->
+      <div style="background: white; border-radius: 16px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); padding: 20px; text-align: center;">
+        <img src="https://cdn.pixabay.com/photo/2017/02/01/17/02/rose-2033675_1280.jpg" alt="Flor eterna púrpura" style="width: 100%; border-radius: 12px;">
+        <h3 style="margin-top: 15px; color: #880e4f;">Flor Púrpura</h3>
+        <p style="color: #444;">Flor preservada color violeta en envase de lujo.</p>
+        <button style="background-color: #ec407a; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+          Comprar
+        </button>
+      </div>
+
+    </div>
+  </section>
