--- a/index.html
+++ b/index.html
@@ -54,49 +54,47 @@
 </head>
 <body>
 
-   <header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Leaf_icon.svg" class="hojas hoja1" width="80" height="80">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Leaf_icon.svg" class="hojas hoja2" width="80" height="80">
-    <h1>ÉterFlor</h1>
-  </header>
+<section id="flores" style="background-color: #fff7f0; padding: 50px 20px;">
+  <h2 style="text-align: center; font-size: 36px; color: #6d4c41;">Flores Eternas</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; margin-top: 40px;">
 
-  <!-- Sección: Flores Eternas -->
-  <section style="padding: 50px 20px; background-color: #fff0f5;">
-    <h2 style="text-align: center; font-family: 'Montserrat', sans-serif; color: #ad1457; font-size: 2.5em; margin-bottom: 30px;">
-      🌹 Flores Eternas
-    </h2>
-
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; max-width: 1200px; margin: 0 auto;">
-      
-      <!-- Flor 1 -->
-      <div style="background: white; border-radius: 16px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); padding: 20px; text-align: center;">
-        <img src="https://cdn.pixabay.com/photo/2020/03/08/14/32/flower-4910972_1280.jpg" alt="Flor eterna rosada" style="width: 100%; border-radius: 12px;">
-        <h3 style="margin-top: 15px; color: #880e4f;">Flor Rosada</h3>
-        <p style="color: #444;">Rosa eterna en caja de cristal. Ideal para regalos románticos.</p>
-        <button style="background-color: #ec407a; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
-          Comprar
-        </button>
+    <!-- Flor 1 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/flor1.jpg" alt="Flor Eterna Rosada" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #8e24aa;">Flor Rosada Eterna</h3>
+      <p style="color: #555;">Una rosa que nunca se marchita, perfecta para recordar momentos especiales.</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20comprar%20la%20Flor%20Rosada%20eterna%20🌹" target="_blank" style="text-decoration: none; margin-right: 10px;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+        <a href="https://example.com/yape-rosada.jpg" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #7c4dff; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            Yape
+          </button>
+        </a>
       </div>
-
-      <!-- Flor 2 -->
-      <div style="background: white; border-radius: 16px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); padding: 20px; text-align: center;">
-        <img src="https://cdn.pixabay.com/photo/2015/12/01/20/28/road-1072823_1280.jpg" alt="Flor eterna azul" style="width: 100%; border-radius: 12px;">
-        <h3 style="margin-top: 15px; color: #880e4f;">Flor Azul</h3>
-        <p style="color: #444;">Flor mágica azul con luz LED. Símbolo de eternidad.</p>
-        <button style="background-color: #ec407a; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
-          Comprar
-        </button>
-      </div>
-
-      <!-- Flor 3 -->
-      <div style="background: white; border-radius: 16px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); padding: 20px; text-align: center;">
-        <img src="https://cdn.pixabay.com/photo/2017/02/01/17/02/rose-2033675_1280.jpg" alt="Flor eterna púrpura" style="width: 100%; border-radius: 12px;">
-        <h3 style="margin-top: 15px; color: #880e4f;">Flor Púrpura</h3>
-        <p style="color: #444;">Flor preservada color violeta en envase de lujo.</p>
-        <button style="background-color: #ec407a; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
-          Comprar
-        </button>
-      </div>
-
     </div>
-  </section>
+
+    <!-- Flor 2 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/flor2.jpg" alt="Flor Eterna Azul" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #1565c0;">Flor Azul Eterna</h3>
+      <p style="color: #555;">Elegante y misteriosa, ideal para demostrar amor eterno y profundo.</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20comprar%20la%20Flor%20Azul%20eterna%20🌸" target="_blank" style="text-decoration: none; margin-right: 10px;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+        <a href="https://example.com/yape-azul.jpg" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #7c4dff; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            Yape
+          </button>
+        </a>
+      </div>
+    </div>
+
+  </div>
+</section>
