--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
       </div>
     </div>
 
+    <!-- Flor 3 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/flor1.jpg" alt="Flor Eterna Rosada" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #8e24aa;">Flor Rosada Eterna</h3>
+      <p style="color: #555;">Una rosa que nunca se marchita, perfecta para recordar momentos especiales.</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20comprar%20la%20Flor%20Rosada%20eterna%20🌹" target="_blank" style="text-decoration: none; margin-right: 10px;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+        <a href="https://example.com/yape-rosada.jpg" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #7c4dff; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            Yape
+          </button>
+        </a>
+      </div>
+    </div>
+
     <!-- Flor 2 -->
     <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
       <img src="https://example.com/flor2.jpg" alt="Flor Eterna Azul" style="width: 100%; border-radius: 10px;">
