--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h3 style="margin-top: 15px; color: #8e24aa;">Flor Rosada Eterna</h3>
       <p style="color: #555;">Simboliza la belleza inmortal del amor que desafía al tiempo. Cada pétalo guarda una promesa eterna. 🌹</p>
       <div style="margin-top: 10px;">
-        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20comprar%20la%20Flor%20Rosada%20eterna%20🌹" target="_blank" style="text-decoration: none;">
+        <a href="https://i.pinimg.com/736x/5a/ab/63/5aab638696a0fa7f361a610aa2c32503.jpg" target="_blank" style="text-decoration: none;">
           <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
             WhatsApp
           </button>
@@ -87,7 +87,7 @@
       <h3 style="margin-top: 15px; color: #1565c0;">Flor Azul Eterna</h3>
       <p style="color: #555;">Misteriosa como el cielo nocturno, esta flor representa el amor profundo que trasciende vidas. 🌌</p>
       <div style="margin-top: 10px;">
-        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20comprar%20la%20Flor%20Azul%20eterna%20🌸" target="_blank" style="text-decoration: none;">
+        <a href="https://i.pinimg.com/736x/01/e6/d3/01e6d3e45d47764180b279fcee852535.jpg" target="_blank" style="text-decoration: none;">
           <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
             WhatsApp
           </button>
@@ -100,3 +100,67 @@
 
 </body>
 </html>
+
+<section id="libros" style="background-color: #fff3e0; padding: 50px 20px;">
+  <h2 style="text-align: center; font-size: 36px; color: #4e342e;">Libros Eternos</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; margin-top: 40px;">
+
+    <!-- Libro 1 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/libro1.jpg" alt="Libro 1" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #6a1b9a;">"Susurros del Infinito"</h3>
+      <p style="color: #555;">Un viaje entre líneas donde el alma se expande, y el tiempo se detiene ante el poder de una historia que trasciende dimensiones.</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20el%20libro%20Susurros%20del%20Infinito%20📖" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+      </div>
+    </div>
+
+    <!-- Libro 2 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/libro2.jpg" alt="Libro 2" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #d84315;">"El Guardián de los Sueños"</h3>
+      <p style="color: #555;">Entre sueños y realidades, esta obra revela que incluso en la oscuridad, hay luces que nunca se apagan.</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20el%20libro%20El%20Guardián%20de%20los%20Sueños%20📚" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+      </div>
+    </div>
+
+    <!-- Libro 3 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/libro3.jpg" alt="Libro 3" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #1e88e5;">"Fragmentos de Eternidad"</h3>
+      <p style="color: #555;">Cada página es una chispa de lo eterno, un eco del alma que persiste más allá del tiempo.</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20el%20libro%20Fragmentos%20de%20Eternidad%20📖" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+      </div>
+    </div>
+
+    <!-- Libro 4 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/libro4.jpg" alt="Libro 4" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #2e7d32;">"La Flor de los Recuerdos"</h3>
+      <p style="color: #555;">Un relato que florece en el corazón, donde cada palabra es un pétalo que guarda memorias imborrables.</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20el%20libro%20La%20Flor%20de%20los%20Recuerdos%20📘" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
