--- a/index.html
+++ b/index.html
@@ -164,3 +164,53 @@
   </div>
 </section>
 
+<section id="electrodomesticos" style="background-color: #e1f5fe; padding: 50px 20px;">
+  <h2 style="text-align: center; font-size: 36px; color: #0288d1;">Electrodomésticos Eternos</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; margin-top: 40px;">
+
+    <!-- Electrodoméstico 1 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/electro1.jpg" alt="Electrodoméstico 1" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #01579b;">Cafetera Eterna</h3>
+      <p style="color: #555;">Despierta cada mañana con el aroma de la eternidad. Esta cafetera es tu compañera ideal para un día perfecto. ☕</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20la%20Cafetera%20Eterna%20☕" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+      </div>
+    </div>
+
+    <!-- Electrodoméstico 2 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/electro2.jpg" alt="Electrodoméstico 2" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #0288d1;">Licuadora Eterna</h3>
+      <p style="color: #555;">Perfecta para preparar tus bebidas más refrescantes. Esta licuadora no conoce el paso del tiempo. 🥤</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20la%20Licuadora%20Eterna%20🥤" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+      </div>
+    </div>
+
+    <!-- Electrodoméstico 3 -->
+    <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+      <img src="https://example.com/electro3.jpg" alt="Electrodoméstico 3" style="width: 100%; border-radius: 10px;">
+      <h3 style="margin-top: 15px; color: #0288d1;">Tostadora Eterna</h3>
+      <p style="color: #555;">Tu desayuno será perfecto con esta tostadora, que transforma cada rebanada en un pedazo de felicidad. 🍞</p>
+      <div style="margin-top: 10px;">
+        <a href="https://wa.me/51987654321?text=Hola%2C%20quiero%20la%20Tostadora%20Eterna%20🍞" target="_blank" style="text-decoration: none;">
+          <button style="background-color: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
+            WhatsApp
+          </button>
+        </a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
