--- a/index.html
+++ b/index.html
@@ -231,4 +231,10 @@
             <h3 style="margin-top: 15px; color: #0288d1;">Licuadora Eterna</h3>
             <p style="color: #555;">Perfecta para preparar tus bebidas más refrescantes. Esta licuadora no conoce el paso del tiempo. 🥤</p>
             <div style="margin-top: 10px; text-align: center;">
-                <button class="boton-
+                <button class="boton-pago pagar-yape-btn" data-producto="Licuadora Eterna">Pagar con Yape</button>
+            </div>
+        </div>
+
+        <div style="background-color: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 300px;">
+            <img src="https://via.placeholder.com/300x200/4fc3f7/0277bd?Text=Tostadora" alt="Electrodoméstico 3" style="width: 100%; border-radius: 10px;">
+            <h3 style="margin-top: 1
